--- a/app/package.json
+++ b/app/package.json
@@ -14,7 +14,7 @@
 		"scripts-sitemap": "./venv/bin/python scripts/sitemap.py",
 		"scripts-upload": "./venv/bin/python scripts/upload.py",
 		"prepare": "npm run smui-theme",
-		"smui-theme": "smui-theme compile static/smui.css -i src/theme"
+		"smui-theme": "smui-theme compile static/css/smui.css -i src/theme"
 	},
 	"devDependencies": {
 		"@fontsource/fira-mono": "^4.5.10",
@@ -39,7 +39,6 @@
 		"@smui/common": "^7.0.0-beta.8",
 		"@smui/fab": "^7.0.0-beta.8",
 		"@smui/icon-button": "^7.0.0-beta.8",
-		"@smui/layout-grid": "^7.0.0-beta.8",
 		"@smui/list": "^7.0.0-beta.8",
 		"@smui/textfield": "^7.0.0-beta.8",
 		"smui-theme": "^7.0.0-beta.8",
