--- a/app/package.json
+++ b/app/package.json
@@ -44,6 +44,6 @@
     "@smui/list": "^7.0.0-beta.8",
     "@smui/textfield": "^7.0.0-beta.8",
     "smui-theme": "^7.0.0-beta.8",
-    "svelte-local-storage-store": "^0.5.0",
+    "svelte-local-storage-store": "^0.5.0"
   }
 }
