--- a/app/package.json
+++ b/app/package.json
@@ -39,11 +39,13 @@
     "@smui/button": "^7.0.0-beta.8",
     "@smui/common": "^7.0.0-beta.8",
     "@smui/data-table": "^7.0.0-beta.8",
+    "@smui/dialog": "^7.0.0-beta.14",
     "@smui/fab": "^7.0.0-beta.8",
     "@smui/icon-button": "^7.0.0-beta.8",
     "@smui/linear-progress": "^7.0.0-beta.14",
     "@smui/list": "^7.0.0-beta.8",
     "@smui/textfield": "^7.0.0-beta.8",
+    "chart.js": "^4.3.0",
     "smui-theme": "^7.0.0-beta.8",
     "svelte-local-storage-store": "^0.5.0"
   }
