--- a/app/package.json
+++ b/app/package.json
@@ -10,7 +10,7 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "eslint .",
     "generate-venv": "python3 -m venv venv && ./venv/bin/pip install -r requirements.txt",
-    "generate-api": "rm -fr src/api && openapi --postfix Api --exportSchemas true --input http://localhost:8000/schema --output ./src/api --client axios",
+    "generate-api": "rm -fr src/api && openapi --postfix Api --exportSchemas true --input http://localhost:8000/schema --output src/api --client axios",
     "scripts-api": "./venv/bin/python scripts/api.py",
     "scripts-sitemap": "./venv/bin/python scripts/sitemap.py",
     "scripts-upload": "./venv/bin/python scripts/upload.py",
