--- a/app/package.json
+++ b/app/package.json
@@ -8,15 +8,14 @@
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "prepare": "npm run smui-theme && gzip -9 -f static/css/smui.css && rm static/css/smui.css",
+    "smui-theme": "smui-theme compile static/css/smui.css -i src/theme",
     "lint": "eslint .",
+    "generate": "openapi --client fetch --name Api --postfixServices '' --input src/api/documentation.yaml --output ./src/api",
     "generate-venv": "python3 -m venv venv && ./venv/bin/pip install -r requirements.txt",
-    "generate-api": "rm -fr src/types && openapi --postfix Api --exportSchemas true --input http://localhost:8000/schema --output src/types --client axios",
     "scripts-api": "./venv/bin/python scripts/api.py",
     "scripts-sitemap": "./venv/bin/python scripts/sitemap.py",
-    "scripts-upload": "./venv/bin/python scripts/upload.py",
-    "prepare": "npm run smui-theme",
-    "smui-theme": "smui-theme compile static/libs/css/smui.css -i src/theme",
-    "generate": "openapi --client fetch --name Api --postfixServices '' --input src/api/documentation.yaml --output ./src/api"
+    "scripts-upload": "./venv/bin/python scripts/upload.py"
   },
   "devDependencies": {
     "@fontsource/fira-mono": "^4.5.10",
