Trying to setup bullet proof client.

--- a/api/api/src/main/resources/openapi/documentation.yaml
+++ b/api/api/src/main/resources/openapi/documentation.yaml
@@ -48,7 +48,7 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/PrijavaRes"
-  /auth/whois:
+  /auth/profil:
     get:
       description: ""
       responses:
