dialog working and optimizing background.

--- a/app/package.json
+++ b/app/package.json
@@ -8,8 +8,8 @@
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "prepare": "npm run smui-theme && gzip -9 -f static/css/smui.css",
-    "smui-theme": "smui-theme compile static/css/smui.css -i src/theme",
+    "prepare": "npm run smui-theme && gzip -9 -f static/gz/smui.css",
+    "smui-theme": "smui-theme compile static/gz/smui.css -i src/theme",
     "lint": "eslint .",
     "generate": "openapi --client fetch --name Api --postfixServices '' --input src/api/documentation.yaml --output ./src/api",
     "generate-venv": "python3 -m venv venv && ./venv/bin/pip install -r requirements.txt",
