--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -12,7 +12,8 @@
     "paths": {
       "$lib": ["./src/lib"],
       "$lib/*": ["./src/lib/*"]
-    }
+    },
+    "experimentalDecorators": true
   }
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
