--- a/app/package.json
+++ b/app/package.json
@@ -47,6 +47,7 @@
     "@smui/linear-progress": "^7.0.0-beta.14",
     "@smui/list": "^7.0.0-beta.8",
     "@smui/textfield": "^7.0.0-beta.8",
+    "@smui/tooltip": "^7.0.0-beta.14",
     "chart.js": "^4.3.0",
     "iso8601-duration": "^2.1.1",
     "serialize-error": "^11.0.0",
