--- a/api/api/src/main/resources/openapi/documentation.yaml
+++ b/api/api/src/main/resources/openapi/documentation.yaml
@@ -4,7 +4,7 @@ info:
   description: "server API"
   version: "1.0.0"
 servers:
-  - url: "https://server"
+- url: "https://server"
 paths:
   /:
     get:
@@ -76,6 +76,15 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/Profil"
+  /kontakt:
+    post:
+      description: ""
+      requestBody:
+        content:
+          '*/*':
+            schema:
+              $ref: "#/components/schemas/KontaktReq"
+        required: true
   /napaka:
     post:
       description: ""
@@ -106,11 +115,11 @@ paths:
     get:
       description: ""
       parameters:
-        - name: "stran"
-          in: "query"
-          required: false
-          schema:
-            type: "integer"
+      - name: "stran"
+        in: "query"
+        required: false
+        schema:
+          type: "integer"
       responses:
         "200":
           description: "OK"
@@ -124,11 +133,11 @@ paths:
     get:
       description: ""
       parameters:
-        - name: "stran"
-          in: "query"
-          required: false
-          schema:
-            type: "integer"
+      - name: "stran"
+        in: "query"
+        required: false
+        schema:
+          type: "integer"
       responses:
         "200":
           description: "OK"
@@ -141,11 +150,11 @@ paths:
     post:
       description: ""
       parameters:
-        - name: "stran"
-          in: "query"
-          required: false
-          schema:
-            type: "integer"
+      - name: "stran"
+        in: "query"
+        required: false
+        schema:
+          type: "integer"
       requestBody:
         content:
           '*/*':
@@ -163,11 +172,11 @@ paths:
     put:
       description: ""
       parameters:
-        - name: "test_id"
-          in: "path"
-          required: true
-          schema:
-            type: "string"
+      - name: "test_id"
+        in: "path"
+        required: true
+        schema:
+          type: "object"
       requestBody:
         content:
           '*/*':
@@ -191,11 +200,11 @@ paths:
     get:
       description: ""
       parameters:
-        - name: "test_id"
-          in: "path"
-          required: true
-          schema:
-            type: "string"
+      - name: "test_id"
+        in: "path"
+        required: true
+        schema:
+          type: "object"
       responses:
         "200":
           description: "OK"
@@ -209,16 +218,16 @@ paths:
     put:
       description: ""
       parameters:
-        - name: "test_id"
-          in: "path"
-          required: true
-          schema:
-            type: "string"
-        - name: "status_id"
-          in: "path"
-          required: true
-          schema:
-            type: "string"
+      - name: "test_id"
+        in: "path"
+        required: true
+        schema:
+          type: "object"
+      - name: "status_id"
+        in: "path"
+        required: true
+        schema:
+          type: "object"
       requestBody:
         content:
           '*/*':
@@ -242,16 +251,16 @@ paths:
     get:
       description: ""
       parameters:
-        - name: "test_id"
-          in: "path"
-          required: true
-          schema:
-            type: "string"
-        - name: "status_id"
-          in: "path"
-          required: true
-          schema:
-            type: "string"
+      - name: "test_id"
+        in: "path"
+        required: true
+        schema:
+          type: "object"
+      - name: "status_id"
+        in: "path"
+        required: true
+        schema:
+          type: "object"
       responses:
         "200":
           description: "OK"
@@ -274,9 +283,9 @@ components:
         napaka:
           type: "string"
           enum:
-            - "UPORABNISKA"
-            - "SISTEMSKA"
-        razred:
+          - "UPORABNISKA"
+          - "SISTEMSKA"
+        status:
           type: "string"
         info:
           type: "string"
@@ -285,18 +294,37 @@ components:
       properties:
         token:
           type: "string"
+    ObjectId:
+      type: "object"
+      properties:
+        timestamp:
+          type: "integer"
+          format: "int32"
     Profil:
       type: "object"
       properties:
         id:
-          type: "string"
+          $ref: "#/components/schemas/ObjectId"
         tip:
           type: "string"
           enum:
-            - "UCENEC"
-            - "UCITELJ"
-            - "INSTRUKTOR"
-            - "ADMIN"
+          - "UCENEC"
+          - "UCITELJ"
+          - "INSTRUKTOR"
+          - "ADMIN"
+          - "KONTAKT"
+          - "SERVER"
+    KontaktReq:
+      type: "object"
+      properties:
+        ime_priimek:
+          type: "string"
+        email:
+          type: "string"
+        telefon:
+          type: "string"
+        vsebina:
+          type: "string"
     NapakaReq:
       type: "object"
       properties:
@@ -305,27 +333,32 @@ components:
         tip:
           type: "string"
           enum:
-            - "ERROR"
-            - "WARN"
-            - "FATAL"
+          - "ERROR"
+          - "WARN"
+          - "FATAL"
+    AnyId:
+      type: "object"
+      properties:
+        value:
+          $ref: "#/components/schemas/ObjectId"
     LocalDateTime:
       type: "object"
-      properties: { }
+      properties: {}
     Napaka:
       type: "object"
       properties:
         _id:
-          type: "string"
+          $ref: "#/components/schemas/ObjectId"
         entitete_id:
           type: "array"
           items:
-            type: "string"
+            $ref: "#/components/schemas/AnyId"
         tip:
           type: "string"
           enum:
-            - "ERROR"
-            - "WARN"
-            - "FATAL"
+          - "ERROR"
+          - "WARN"
+          - "FATAL"
         vsebina:
           type: "string"
         dodatno:
@@ -336,7 +369,7 @@ components:
       type: "object"
       properties:
         _id:
-          type: "string"
+          $ref: "#/components/schemas/ObjectId"
         ime:
           type: "string"
         priimek:
@@ -346,17 +379,19 @@ components:
         tip:
           type: "string"
           enum:
-            - "UCENEC"
-            - "UCITELJ"
-            - "INSTRUKTOR"
-            - "ADMIN"
+          - "UCENEC"
+          - "UCITELJ"
+          - "INSTRUKTOR"
+          - "ADMIN"
+          - "KONTAKT"
+          - "SERVER"
     Naslov:
       type: "object"
       properties:
         _id:
-          type: "string"
+          $ref: "#/components/schemas/ObjectId"
         oseba_id:
-          type: "string"
+          $ref: "#/components/schemas/ObjectId"
         drzava:
           type: "string"
         mesto:
@@ -372,11 +407,11 @@ components:
       type: "object"
       properties:
         _id:
-          type: "string"
+          $ref: "#/components/schemas/ObjectId"
         oseba_ucenec_id:
-          type: "string"
+          $ref: "#/components/schemas/ObjectId"
         oseba_ucitelj_id:
-          type: "string"
+          $ref: "#/components/schemas/ObjectId"
     UcenjeData:
       type: "object"
       properties:
@@ -394,25 +429,25 @@ components:
       type: "object"
       properties:
         _id:
-          type: "string"
+          $ref: "#/components/schemas/ObjectId"
         oseba_id:
-          type: "string"
+          $ref: "#/components/schemas/ObjectId"
         data:
           type: "string"
         tip:
           type: "string"
           enum:
-            - "EMAIL"
-            - "TELEFON"
+          - "EMAIL"
+          - "TELEFON"
     Sporocilo:
       type: "object"
       properties:
         _id:
-          type: "string"
+          $ref: "#/components/schemas/ObjectId"
         kontakt_posiljatelj_id:
-          type: "string"
+          $ref: "#/components/schemas/ObjectId"
         kontakt_prejemnik_id:
-          type: "string"
+          $ref: "#/components/schemas/ObjectId"
         vsebina:
           type: "string"
     SporociloData:
@@ -443,14 +478,14 @@ components:
             $ref: "#/components/schemas/SporociloData"
     LocalDate:
       type: "object"
-      properties: { }
+      properties: {}
     Test:
       type: "object"
       properties:
         _id:
-          type: "string"
+          $ref: "#/components/schemas/ObjectId"
         oseba_id:
-          type: "string"
+          $ref: "#/components/schemas/ObjectId"
         naslov:
           type: "string"
         podnaslov:
@@ -461,27 +496,27 @@ components:
       type: "object"
       properties:
         _id:
-          type: "string"
+          $ref: "#/components/schemas/ObjectId"
         naloga_id:
-          type: "string"
+          $ref: "#/components/schemas/ObjectId"
         test_id:
-          type: "string"
+          $ref: "#/components/schemas/ObjectId"
         tip:
           type: "string"
           enum:
-            - "NEZACETO"
-            - "NERESENO"
-            - "NAPACNO"
-            - "PRAVILNO"
+          - "NEZACETO"
+          - "NERESENO"
+          - "NAPACNO"
+          - "PRAVILNO"
         pojasnilo:
           type: "string"
     Naloga:
       type: "object"
       properties:
         _id:
-          type: "string"
+          $ref: "#/components/schemas/ObjectId"
         tematika_id:
-          type: "string"
+          $ref: "#/components/schemas/ObjectId"
         resitev:
           type: "string"
         vsebina:
@@ -490,9 +525,9 @@ components:
       type: "object"
       properties:
         _id:
-          type: "string"
+          $ref: "#/components/schemas/ObjectId"
         zvezek_id:
-          type: "string"
+          $ref: "#/components/schemas/ObjectId"
         naslov:
           type: "string"
     NalogaData:
@@ -547,16 +582,16 @@ components:
       type: "object"
       properties:
         _id:
-          type: "string"
+          $ref: "#/components/schemas/ObjectId"
         entitete_id:
           type: "array"
           items:
-            type: "string"
+            $ref: "#/components/schemas/AnyId"
         tip:
           type: "string"
           enum:
-            - "STATUS_TIP_POSODOBITEV"
-            - "TEST_DATUM_POSODOBITEV"
+          - "STATUS_TIP_POSODOBITEV"
+          - "TEST_DATUM_POSODOBITEV"
         opis:
           type: "string"
         trajanje:
@@ -577,10 +612,10 @@ components:
         tip:
           type: "string"
           enum:
-            - "NEZACETO"
-            - "NERESENO"
-            - "NAPACNO"
-            - "PRAVILNO"
+          - "NEZACETO"
+          - "NERESENO"
+          - "NAPACNO"
+          - "PRAVILNO"
         sekund:
           type: "integer"
           format: "int32"
