--- a/app/package.json
+++ b/app/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "@smui-extra/accordion": "^7.0.0-beta.14",
     "@smui/button": "^7.0.0-beta.8",
+    "@smui/circular-progress": "^7.0.0-beta.14",
     "@smui/common": "^7.0.0-beta.8",
     "@smui/data-table": "^7.0.0-beta.8",
     "@smui/dialog": "^7.0.0-beta.14",
