--- a/app/package.json
+++ b/app/package.json
@@ -1,57 +1,38 @@
 {
   "name": "app",
-  "version": "0.0.1",
-  "type": "module",
+  "version": "0.0.0",
   "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
-    "preview": "vite preview",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "prepare": "npm run smui-theme && gzip -9 -f static/gz/smui.css",
-    "smui-theme": "smui-theme compile static/gz/smui.css -i src/theme",
-    "lint": "eslint .",
-    "generate": "openapi --client fetch --name Api --postfixServices '' --input src/lib/api/documentation.yaml --output ./src/lib/api",
-    "generate-venv": "python3 -m venv venv && ./venv/bin/pip install -r requirements.txt",
-    "scripts-api": "./venv/bin/python scripts/api.py",
-    "scripts-sitemap": "./venv/bin/python scripts/sitemap.py",
-    "scripts-upload": "./venv/bin/python scripts/upload.py"
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "^16.1.0",
+    "@angular/common": "^16.1.0",
+    "@angular/compiler": "^16.1.0",
+    "@angular/core": "^16.1.0",
+    "@angular/forms": "^16.1.0",
+    "@angular/platform-browser": "^16.1.0",
+    "@angular/platform-browser-dynamic": "^16.1.0",
+    "@angular/router": "^16.1.0",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@fontsource/fira-mono": "^4.5.10",
-    "@material/typography": "^14.0.0",
-    "@sveltejs/adapter-auto": "^2.0.0",
-    "@sveltejs/adapter-static": "^2.0.1",
-    "@sveltejs/kit": "^1.5.0",
-    "@types/cookie": "^0.5.1",
-    "@typescript-eslint/eslint-plugin": "^5.45.0",
-    "@typescript-eslint/parser": "^5.45.0",
-    "eslint": "^8.28.0",
-    "eslint-plugin-svelte3": "^4.0.0",
-    "openapi-typescript-codegen": "^0.25.0",
-    "smui-theme": "^7.0.0-beta.8",
-    "svelte": "^3.54.0",
-    "svelte-check": "^3.0.1",
-    "tslib": "^2.4.1",
-    "typescript": "^5.0.0",
-    "vite": "^4.3.0"
-  },
-  "dependencies": {
-    "@smui-extra/accordion": "^7.0.0-beta.14",
-    "@smui/button": "^7.0.0-beta.8",
-    "@smui/circular-progress": "^7.0.0-beta.14",
-    "@smui/common": "^7.0.0-beta.8",
-    "@smui/data-table": "^7.0.0-beta.8",
-    "@smui/dialog": "^7.0.0-beta.14",
-    "@smui/fab": "^7.0.0-beta.8",
-    "@smui/icon-button": "^7.0.0-beta.8",
-    "@smui/linear-progress": "^7.0.0-beta.14",
-    "@smui/list": "^7.0.0-beta.8",
-    "@smui/textfield": "^7.0.0-beta.8",
-    "@smui/tooltip": "^7.0.0-beta.14",
-    "chart.js": "^4.3.0",
-    "iso8601-duration": "^2.1.1",
-    "serialize-error": "^11.0.0",
-    "svelte-local-storage-store": "^0.5.0"
+    "@angular-devkit/build-angular": "^16.1.6",
+    "@angular/cli": "~16.1.6",
+    "@angular/compiler-cli": "^16.1.0",
+    "@types/jasmine": "~4.3.0",
+    "jasmine-core": "~4.6.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.1.0",
+    "typescript": "~5.1.3"
   }
 }
