--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "api": "openapi --input ./documentation.yaml --output ./src/app/api --client angular"
+    "openapi": "openapi --input ./documentation.yaml --output ./src/app/api --client angular"
   },
   "private": true,
   "dependencies": {
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "bootstrap": "^5.3.1",
+    "dexie": "^3.2.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -37,7 +38,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.1.3",
-    "openapi-typescript-codegen": "^0.25.0"
+    "openapi-typescript-codegen": "^0.25.0",
+    "typescript": "~5.1.3"
   }
 }
