--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^16.1.0",
     "bootstrap": "^5.3.1",
     "dexie": "^3.2.4",
+    "iso8601-duration": "^2.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
