--- a/app/package.json
+++ b/app/package.json
@@ -21,10 +21,13 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@swimlane/ngx-charts": "^20.4.1",
     "bootstrap": "^5.3.1",
     "dexie": "^3.2.4",
     "iso8601-duration": "^2.1.1",
+    "moment": "^2.29.4",
     "rxjs": "~7.8.0",
+    "simple-statistics": "^7.8.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
@@ -32,6 +35,7 @@
     "@angular-devkit/build-angular": "^16.1.6",
     "@angular/cli": "~16.1.6",
     "@angular/compiler-cli": "^16.1.0",
+    "@types/d3": "^7.4.0",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
