--- a/app/package.json
+++ b/app/package.json
@@ -29,6 +29,7 @@
     "rxjs": "~7.8.0",
     "simple-statistics": "^7.8.3",
     "tslib": "^2.3.0",
+    "typesafe-routes": "^10.0.4",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
