Fixing api service.

--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "openapi": "openapi --input ./documentation.yaml --output ./src/app/api --client angular"
+    "openapi": "ng-openapi-gen"
   },
   "private": true,
   "dependencies": {
@@ -33,6 +33,7 @@
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
+    "ng-openapi-gen": "^0.25.1",
     "@angular-devkit/build-angular": "^16.1.6",
     "@angular/cli": "~16.1.6",
     "@angular/compiler-cli": "^16.1.0",
